# CrewAI

./: README.md  poem.txt  pyproject.toml  sec_filings_report.html  sec_filings_report.md  summary.md
src/my_project/: crew.py
src/my_project/tools/: custom_tool.py  parse_sec_filings.py  rss.py
src/secfilingsparser/: main.py  rss.py
src/secfilingsparser/crews/htmlrendercrew/: htmlrendercrew.py
src/secfilingsparser/crews/htmlrendercrew/config/: agents.yaml  tasks.yaml
src/secfilingsparser/crews/poem_crew/: FinancialFilingsCrew.py
src/secfilingsparser/crews/poem_crew/config/: agents.yaml  tasks.yaml
src/secrag/: main.py  rss.py
src/secrag/crews/poem_crew/: FinancialFilingsCrew.py
src/secrag/crews/ragbuildercrew/: ragbuildercrew.py
src/secrag/crews/ragbuildercrew/config/: agents.yaml  tasks.yaml
src/secrag/tools/: RAGTool.py
