[project]
name = "secfilingsparser"
version = "0.1.0"
description = "secFilingsParser using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "feedparser>=6.0.11",
]

[project.scripts]
kickoff = "secfilingsparser.main:kickoff"
run_crew = "secfilingsparser.main:kickoff"
plot = "secfilingsparser.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
